# resolution

./: .gitignore  CHANGELOG  Cargo.toml  README.md
src/: error.rs  lib.rs
