[package]
name        = "resolution"
version     = "0.1.4"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/resolution"
repository  = "https://github.com/cacilhas/resolution"
keywords    = ["screen", "linux", "macos", "windows"]
description = "Retrieves current screen resolution"
edition     = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
xrandr = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }